objects/Solutions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main contact and client collaborator with instituting ProService development areas.</description>
        <inlineHelpText>If a client contact does not appear in the lookup, you may need to set up the Contact before proceeding.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Between__c</fullName>
        <formula>Solution_Due_Date__c - Inception_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Set_Up_Start__c</fullName>
        <description>This is the beginning of "live" service.</description>
        <label>Estimated Set Up Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Transition_Date__c</fullName>
        <description>Estimated date when functionality will be handed over to the team for continuing support.</description>
        <label>Estimated Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Findings__c</fullName>
        <description>Description of the findings from the client interview</description>
        <label>Findings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inception_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Initial meeting date with the client to determine the overall scope of necessary services from ProService</description>
        <label>Inception Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress_Status__c</fullName>
        <formula>IMAGE(  
CASE( Progress__c,
"Green", "/img/samples/light_green.gif", 
"Yellow", "/img/samples/light_yellow.gif",
"Red", "/img/samples/light_red.gif",  
"/s.gif"),  
"status color")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProService individual responsible for Solution</description>
        <label>Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Conclusion__c</fullName>
        <description>Delivered results for the First Solution</description>
        <label>Solution Conclusion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Due_Date__c</fullName>
        <description>Estimated delivery date of the first solution</description>
        <label>Solution Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Result__c</fullName>
        <description>Client's satisfaction level in regards to the completed solution</description>
        <label>Solution Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Service__c</fullName>
        <description>Outline of First Solution</description>
        <label>Solution Service</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Sub_Description__c</fullName>
        <label>Solution Sub Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Certification Management</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Dashboard Development</fullName>
                </value>
                <value>
                    <fullName>GL Export</fullName>
                </value>
                <value>
                    <fullName>Management Reports</fullName>
                </value>
                <value>
                    <fullName>Scheduling Management</fullName>
                </value>
                <value>
                    <fullName>Self-Service Development</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Workflow Management</fullName>
                </value>
                <value>
                    <fullName>Payroll Reports</fullName>
                </value>
                <value>
                    <fullName>Provider Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager Development</fullName>
                </value>
                <value>
                    <fullName>Recruiting Development</fullName>
                </value>
                <value>
                    <fullName>Time and Attendance</fullName>
                </value>
                <value>
                    <fullName>HRMS Update</fullName>
                </value>
                <value>
                    <fullName>Reporting Development</fullName>
                </value>
                <value>
                    <fullName>UltiPro .NET Setup</fullName>
                </value>
                <value>
                    <fullName>General Consultation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_1__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Client Approval of .NET Plan</fullName>
                </value>
                <value>
                    <fullName>Client Approval of Plan</fullName>
                </value>
                <value>
                    <fullName>Ordering Clock</fullName>
                </value>
                <value>
                    <fullName>Setting Up .NET</fullName>
                </value>
                <value>
                    <fullName>Setting up PSH Process</fullName>
                </value>
                <value>
                    <fullName>Writing Report</fullName>
                </value>
                <value>
                    <fullName>Importing Cost Centers</fullName>
                </value>
                <value>
                    <fullName>Importing Employees</fullName>
                </value>
                <value>
                    <fullName>Setting up SaaShr</fullName>
                </value>
                <value>
                    <fullName>Setting up Middleware</fullName>
                </value>
                <value>
                    <fullName>Creating Dashboard</fullName>
                </value>
                <value>
                    <fullName>Installing Clocks</fullName>
                </value>
                <value>
                    <fullName>Training Admins</fullName>
                </value>
                <value>
                    <fullName>Training Managers</fullName>
                </value>
                <value>
                    <fullName>Training Employees</fullName>
                </value>
                <value>
                    <fullName>Parallel Testing</fullName>
                </value>
                <value>
                    <fullName>Time Import Testing</fullName>
                </value>
                <value>
                    <fullName>Client Review</fullName>
                </value>
                <value>
                    <fullName>Going Live</fullName>
                </value>
                <value>
                    <fullName>Transition Prep</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Internal Client consulting group that focuses on improvement of higher level HR and insurance functionality using ProService's resources.</description>
    <label>Solutions</label>
    <nameField>
        <label>Solutions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Provider__c</columns>
        <columns>NAME</columns>
        <columns>Solution__c</columns>
        <columns>Status_1__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Progress_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Solutions</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Progress_Status__c</columns>
        <columns>Solution_Due_Date__c</columns>
        <columns>Solution_Service__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Solution_Result__c</columns>
        <columns>Status_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_1__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Open Solutions</label>
    </listViews>
    <listViews>
        <fullName>Open_Solutions_Gilles</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Inception_Date__c</columns>
        <columns>Progress_Status__c</columns>
        <columns>Status_1__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Solution_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>equals</operation>
            <value>Gilles Plot</value>
        </filters>
        <filters>
            <field>Status_1__c</field>
            <operation>notContain</operation>
            <value>Completed</value>
        </filters>
        <label>Open Solutions - Gilles</label>
    </listViews>
    <listViews>
        <fullName>Open_Solutions_Shawn</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status_1__c</columns>
        <columns>Inception_Date__c</columns>
        <columns>Progress_Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Solution_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>equals</operation>
            <value>Shawn Leon-Guerrero</value>
        </filters>
        <filters>
            <field>Status_1__c</field>
            <operation>notContain</operation>
            <value>Completed</value>
        </filters>
        <label>Open Solutions - Shawn</label>
    </listViews>
    <listViews>
        <fullName>Open_Solutions_Viktoria</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Inception_Date__c</columns>
        <columns>Progress_Status__c</columns>
        <columns>Status_1__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Solution_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provider__c</field>
            <operation>equals</operation>
            <value>Viktoria West</value>
        </filters>
        <filters>
            <field>Status_1__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Open Solutions - Viktoria</label>
    </listViews>
</CustomObject>